--- a/src/PokeGrid.css
+++ b/src/PokeGrid.css
@@ -1,10 +1,10 @@
-div {
+PokeGrid {
     display: flex;
     flex-wrap: nowrap;
     flex-direction: column;
     width: 400px;
     height: 900px;
-    background-color:blue;
+    background-color:rgba(255, 238, 0, 0.993);
     overflow: auto; 
     justify-content: space-evenly;
     align-items: center;
